ci/cd upgradtion